--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <title>Oscar Juárez</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
 </head>
 
 <body>
