--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script>
+    <script src="https://kit.fontawesome.com/4a1d8beb77.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
